--- a/apps/package.json
+++ b/apps/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "start-pm2": "pm2 start ecosystem.config.js",
-    "stop-pm2": "pm2 stop all",
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop all",
     "log": "pm2 logs",
-    "delete-pm2": "pm2 delete all"
+    "delete": "pm2 delete all",
+    "list": "pm2 list"
   },
   "dependencies": {
     "pm2": "^5.4.3"
