feat: 新增localhost 測試domain-name範本，已設定完nginx

--- a/apps/abp/aspnet-core/Further.Abp/appsettings.json
+++ b/apps/abp/aspnet-core/Further.Abp/appsettings.json
@@ -1,15 +1,20 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44366",
-    "ClientUrl": "http://localhost:4200",
-    "CorsOrigins": "https://*.Abp.com,http://localhost:4200",
-    "RedirectAllowedUrls": "http://localhost:4200"
+    //"SelfUrl": "https://localhost:44366",
+    //"ClientUrl": "http://localhost:4200",
+    //"CorsOrigins": "https://*.Abp.com,http://localhost:4200",
+    //"RedirectAllowedUrls": "http://localhost:4200",
+    "SelfUrl": "https://api.getabp.net",
+    "ClientUrl": "https://admin.getabp.net",
+    "CorsOrigins": "https://*.Abp.com,https://admin.getabp.net,https://*.admin.getabp.net",
+    "RedirectAllowedUrls": "https://admin.getabp.net"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Abp;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=localhost,1434;Database=FurtherAbp;Trusted_Connection=False;TrustServerCertificate=True;User=sa;Password=myPassw0rd;"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44366",
+    //"Authority": "https://localhost:44366",
+    "Authority": "https://api.getabp.net",
     "RequireHttpsMetadata": false,
     "SwaggerClientId": "Abp_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
@@ -21,11 +26,13 @@
     "Applications": {
       "Abp_App": {
         "ClientId": "Abp_App",
-        "RootUrl": "http://localhost:4200"
+        //"RootUrl": "http://localhost:4200",
+        "RootUrl": "https://admin.getabp.net"
       },
       "Abp_Swagger": {
         "ClientId": "Abp_Swagger",
-        "RootUrl": "https://localhost:44366"
+        //"RootUrl": "https://localhost:44366",
+        "RootUrl": "https://api.getabp.net"
       }
     }
   }
