fix:讓多租戶結合domain-name可正常登入

--- a/apps/abp/aspnet-core/Further.Abp/appsettings.json
+++ b/apps/abp/aspnet-core/Further.Abp/appsettings.json
@@ -6,8 +6,7 @@
     //"RedirectAllowedUrls": "http://localhost:4200",
     "SelfUrl": "https://api.getabp.net",
     "ClientUrl": "https://admin.getabp.net",
-    "CorsOrigins": "https://*.Abp.com,https://admin.getabp.net,https://*.admin.getabp.net",
-    "RedirectAllowedUrls": "https://admin.getabp.net"
+    "CorsOrigins": "https://*.Abp.com,https://admin.getabp.net,https://*.admin.getabp.net,https://*.api.getabp.net"
   },
   "ConnectionStrings": {
     "Default": "Server=localhost,1434;Database=FurtherAbp;Trusted_Connection=False;TrustServerCertificate=True;User=sa;Password=myPassw0rd;"
